2008-06-20 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdb-engine.cc: 
	  (GDBEngine::load_program()): don't set LD_BIND_NOW by default.
	  Now, the NMV_LD_BIND_NOW env variable has to be set to 1 when you
	  want to instruct gdb to set LD_BIND_NOW.
	  This should fix: #539311 - rhythmbox can loads its plugins under nemiver

2008-06-19 Dodji Seketeli <dodji@gnome.org>

	* src/persp/dbgperspective/nmv-local-vars-inspector2.cc:
	  (Priv::re_init_tree_view()): don't forget to clean the
	  variable walkers as well as the widget. Otherwise, the content of
	  the walker won't reflect the content of the widget.
	  (Priv::on_func_arg_visited_signal()): when stepping in the same
	  function, while walking a function arguments variable, check if the
	  function args subtree (in the widget) is empty. If the subtree is
	  empty, append the variable the function arguments subtree.
	  Otherwise, if you try to 'update' an empty subtree, you will get an
	  error message saying "could not find variable in inspector: foo".
	  The root reason why the subtree is empty in the first place, is that
	  it must be populated by a call to debugger->list_frames_arguments().
	  Problem is that for some unknown reason, that call fails often, due
	  do GDB suckage.
	  This should fix bug #499873 – Variable 'this' not found.

2008-06-19 Dodji Seketeli <dodji@gnome.org>

	* tests/Makefile: don't call the binary gtkmm-test but rather
	  gtkmmtest to comply with the other binaries names. Let's be
	  homogeneous :-)

2008-06-19 Dodji Seketeli <dodji@gnome.org>

	* src/persp/dbgperspective/nmv-dbg-perspective.cc: 
	  (DBGPerspective::on_debugger_state_changed_signal()): don't
	  forget to signal when the debugger is busy. That should fix
	  #539109 – can't stop running inferior

2008-06-16  Jonathon Jongsma  <jonathon.jongsma@collabora.co.uk>

	* tests/Makefile.am:
	* tests/gtkmm-test.cc: add a test which loops infinitely (e.g. a simple